--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,7 +44,65 @@ a, a:hover {
 }
 .customBtn span {
     position: relative;
-    z-index: 999;
+    z-index: 3;
+}
+
+.containerBreak {}
+.containerBreak-row {
+    align-items: center;
+}
+.containerBreak-row-left {}
+.containerBreak-row-right {}
+.containerBreak-row-right > [class*="col"]:first-child {
+    padding-right: 0;
+}
+.containerBreak-row-right > [class*="col"]:last-child {
+    padding-left: 30px;
+}
+.containerBreak-row-right .containerBreak-row-img {
+    margin-right: -65px;
+}
+.containerBreak-row-left > [class*="col"]:first-child {
+    padding-right: 0;
+}
+.containerBreak-row-left > [class*="col"]:last-child {
+    padding-left: 30px;
+}
+.containerBreak-row-left .containerBreak-row-img {
+    margin-left: -65px;
+}
+@media (max-width: 992px) {
+    .container-fluid {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .containerBreak {}
+    .containerBreak-row {
+        align-items: center;
+    }
+    .containerBreak-row-left {}
+    .containerBreak-row-right {}
+    .containerBreak-row-right > [class*="col"]:first-child {
+        padding-right: 15px;
+    }
+    .containerBreak-row-right > [class*="col"]:last-child {
+        padding-left: 15px;
+    }
+    .containerBreak-row-right .containerBreak-row-img {
+        margin-right: -20px;
+        margin-left: -20px;
+    }
+    .containerBreak-row-left [class*="col"]:first-child {
+        padding-right: 15px;
+    }
+    .containerBreak-row-left [class*="col"]:last-child {
+        padding-left: 15px;
+    }
+    .containerBreak-row-left .containerBreak-row-img {
+        margin-left: -20px;
+        margin-right: -20px;
+    }
 }
 /* DEFAULT STYLESHEET END */
 
@@ -57,6 +115,7 @@ a, a:hover {
     position: absolute;
     top: 0;
     width: 100%;
+    z-index: 999;
 }
 .section_navbar_container {
     display: flex;
@@ -66,6 +125,7 @@ a, a:hover {
 .section_navbar_container_link {
     font-size: 55px;
     color: #ffffff;
+    line-height: 1;
 }
 .section_navbar_container_link:hover {
     color: #ffffff;
@@ -109,6 +169,134 @@ a, a:hover {
 .section_navbar_container_search:hover {
     color: #ffffff;
 }
+.section_navbar_container_toggle {
+    display: none;
+    color: #ff415c;
+    font-size: 43px;
+    line-height: 1;
+}
+.section_navbar_container_toggle:hover {
+    color: #ff415c;
+}
+
+.section_navbar_container_mobileMenu {
+    display: none;
+}
+
+.section_navbar_container_mobileMenu_search {
+    padding-top: 15px;
+}
+.searchGroup {
+    border: 1px solid transparent;
+    padding: 0 0 0 7px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.searchGroup.active {
+    border-color: #ffffff;
+}
+.searchGroup input {
+    background: none;
+    border: none;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    outline: none;
+    box-shadow: none;
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 400;
+    display: none;
+}
+.searchGroup.active input {
+    display: block;
+}
+.searchGroup input:focus,
+.searchGroup input:active,
+.searchGroup input:hover {
+    box-shadow: none;
+    border: none;
+    outline: none;
+}
+.searchBtn {
+    padding: 10px;
+    margin: 0;
+    border: none;
+    background: none;
+
+    font-size: 23px;
+    color: #f0f0f0;
+    line-height: 1;
+    font-family: sans-serif;
+    margin-left: auto;
+}
+
+.section_navbar_container_mobileMenu_items_item--link {
+    color: #ffffff;
+    font-size: 40px;
+    font-weight: 700;
+    font-style: normal;
+    letter-spacing: 6px;
+    line-height: 45px;
+    text-align: left;
+    text-transform: uppercase;
+    padding: 22px 0;
+    display: block;
+    opacity: 0.6;
+    filter: blur(1.5px);
+}
+.active.section_navbar_container_mobileMenu_items_item .section_navbar_container_mobileMenu_items_item--link {
+    opacity: 1;
+    filter: blur(0);
+}
+
+
+
+@media (max-width: 992px) {
+    .section_navbar_container_link {
+        font-size: 42px;
+        line-height: 1;
+    }
+    .section_navbar_container_search {
+        display: none;
+    }
+    .section_navbar_container_menu {
+        display: none;
+    }
+
+    .section_navbar_container_mobileMenu {
+        height: 100vh;
+        width: 100%;
+        position: absolute;
+        left: -100%;
+        top: 0;
+        display: flex;
+        flex-direction: column;
+        transition: all 0.3s;
+
+        background: url(../images/background.png) center center;
+        background-size: cover;
+        min-height: 600px;
+        max-height: 1000px;
+        padding-top: 45px;
+        padding-bottom: 90px;
+    }
+    .section_navbar_container_mobileMenu.active {
+        left: 0;
+    }
+
+    .section_navbar_container_mobileMenu_header {
+        display: flex;
+        justify-content: space-between;
+    }
+
+
+
+    .section_navbar_container_toggle {
+        display: block;
+    }
+}
 /* NAVBAR END */
 
 
@@ -124,9 +312,10 @@ a, a:hover {
 
     display: flex;
     align-items: center;
+    position: relative;
 }
 .section_header_img {
-    margin-left: -65px;
+    /*margin-left: -65px;*/
 }
 .section_header--header {
     color: #ffffff;
@@ -134,7 +323,7 @@ a, a:hover {
     font-weight: 700;
     font-style: normal;
     letter-spacing: 21px;
-    line-height: 75px;
+    line-height: 1.1;
     text-align: left;
     padding-bottom: 31px;
     margin: 0;
@@ -150,6 +339,70 @@ a, a:hover {
     text-align: left;
     padding-bottom: 55px;
     margin: 0;
+}
+
+.scrollDown {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    /*width: 100%;*/
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+    height: 130px;
+}
+.scrollDown-link {
+    color: #ffffff;
+    font-family: "BebasNeue-Book";
+    font-size: 16px;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 1.28px;
+    text-align: left;
+
+    display: inline-flex;
+    align-items: center;
+}
+.scrollDown-link:hover {
+    color: #ffffff;
+}
+.scrollDown-link i {
+    font-size: 31px;
+    padding: 5px 24px;
+}
+
+@media (max-width: 992px) {
+    .section_header {
+        padding-top: 135px;
+        padding-bottom: 90px;
+    }
+    .section_header--header {
+        color: #ffffff;
+        font-size: 40px;
+        padding-bottom: 19px;
+        letter-spacing: 6px;
+    }
+    .section_header--description {
+        color: #ffffff;
+        font-size: 16px;
+        padding-bottom: 23px;
+    }
+
+    .scrollDown {
+        height: 90px;
+    }
+    .scrollDown-link {
+        color: #ffffff;
+        font-family: "BebasNeue-Book";
+        font-size: 16px;
+    }
+    .scrollDown-link:hover {
+        color: #ffffff;
+    }
+    .scrollDown-link i {
+        font-size: 30px;
+        padding: 3px 18px;
+    }
 }
 /* HEADER END */
 /* SECTIONS END */
