--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,7 +11,7 @@ body {
     width: 100%;
     height: auto;
     position: relative;
-    background-color: #ffffff;
+    /*background-color: #ffffff;*/
     overflow: hidden;
 }
 .box-resize {
@@ -1151,6 +1151,19 @@ ul li::marker {
     }
 }
 /* OUR SERVICES INNER END */
+
+
+/* ERROR */
+.section_error {
+    padding-bottom: 130px;
+}
+
+@media (max-width: 992px) {
+    .section_error {
+        padding-bottom: 100px;
+    }
+}
+/* ERROR END */
 
 
 /* FOOTER */
