--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,8 @@ body {
 .container-fluid {
     padding-left: 65px;
     padding-right: 65px;
+    z-index: 999;
+    position: relative;
 }
 
 .box {
@@ -93,10 +95,10 @@ ul li::marker {
 .containerBreak-row-left {}
 .containerBreak-row-right {}
 .containerBreak-row-right > [class*="col"]:first-child {
-    padding-right: 0;
+    padding-right: 30px;
 }
 .containerBreak-row-right > [class*="col"]:last-child {
-    padding-left: 30px;
+    padding-left: 0;
 }
 .containerBreak-row-right .containerBreak-row-img {
     margin-right: -65px;
@@ -197,6 +199,7 @@ ul li::marker {
     font-size: 55px;
     color: #ffffff;
     line-height: 1;
+    flex: 230px;
 }
 .section_navbar_container_link:hover {
     color: #ffffff;
@@ -221,6 +224,8 @@ ul li::marker {
 
 .section_navbar_container_menu {
     display: flex;
+    flex: calc(100% - 460px);
+    justify-content: center;
 }
 .section_navbar_container_menu_item {
     padding: 0 35px;
@@ -261,6 +266,7 @@ ul li::marker {
 .section_navbar_container_search {
     color: #ffffff;
     font-size: 18px;
+    flex: 230px;
 }
 .section_navbar_container_search:hover {
     color: #ffffff;
@@ -284,6 +290,7 @@ ul li::marker {
 
 .section_navbar_container_mobileMenu {
     display: none;
+    z-index: 9999999;
 }
 .section_navbar_container_mobileMenu > .container-fluid {
     display: flex;
@@ -294,6 +301,15 @@ ul li::marker {
 
 .section_navbar_container_mobileMenu_search {
     padding-top: 15px;
+}
+.section_navbar_container_search .searchGroup {
+    /*position: relative;*/
+    /*top: -8px;*/
+    border: 1px solid transparent;
+}
+.section_navbar_container_search .searchBtn {
+    font-size: 18px;
+    height: 46px;
 }
 .searchGroup {
     border: 1px solid transparent;
@@ -427,7 +443,9 @@ ul li::marker {
 }
 
 
-
+button:focus {
+    outline: none
+}
 
 
 @media (max-width: 992px) {
@@ -445,7 +463,7 @@ ul li::marker {
     .section_navbar_container_mobileMenu {
         height: 100vh;
         width: 100%;
-        position: absolute;
+        position: fixed;
         left: -100%;
         top: 0;
         display: flex;
@@ -1389,7 +1407,7 @@ ul li::marker {
         display: block;
         height: 1px;
         width: 90%;
-        min-width: 3a0px;
+        min-width: 30px;
         position: relative;
         transition: all 0.3s;
     }
@@ -1427,5 +1445,57 @@ ul li::marker {
     .section_weFixIt_body_items_item_body_item {
         width: 170px;
         flex: 170px;
+    }
+}
+
+.container-fluid-grid {
+    position: static;
+    height: 0 !important;
+}
+.grid {
+    position: relative;
+}
+.grid-item {
+    position: fixed;
+    height: 100%;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    top: 0;
+    z-index: -2;
+    opacity: 0.3;
+}
+.grid-bgWhite .grid-item {
+    border: 1px solid rgba(25, 79, 132, 0.3);
+}
+.grid-1 {
+    left: calc(calc(100% - calc(100% - 130px) / 4 * 4) - 65px);
+}
+.grid-2 {
+    left: calc(calc(100% - calc(100% - 130px) / 4 * 3) - 65px);
+}
+.grid-3 {
+    left: calc(calc(100% - calc(100% - 130px) / 4 * 2) - 65px);
+}
+.grid-4 {
+    left: calc(calc(100% - calc(100% - 130px) / 4 * 1) - 65px);
+}
+.grid-5 {
+    left: calc(calc(100% - calc(100% - 130px) / 4 * 0) - 65px)
+}
+
+@media (max-width: 992px) {
+    .grid-1 {
+        left: calc(calc(100% - calc(100% - 40px) / 4 * 4) - 20px);
+    }
+    .grid-2 {
+        left: calc(calc(100% - calc(100% - 40px) / 4 * 3) - 20px);
+    }
+    .grid-3 {
+        left: calc(calc(100% - calc(100% - 40px) / 4 * 2) - 20px);
+    }
+    .grid-4 {
+        left: calc(calc(100% - calc(100% - 40px) / 4 * 1) - 20px);
+    }
+    .grid-5 {
+        left: calc(calc(100% - calc(100% - 40px) / 4 * 0) - 20px)
     }
 }
