--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -589,8 +589,8 @@ button:focus {
 .section_header {
     background: url(../images/background.png) center center;
     background-size: cover;
-    height: 100vh;
-    min-height: 640px;
+    height: 100%;
+    min-height: 100vh;
     max-height: 1000px;
     padding-top: 130px;
     padding-bottom: 5px;
